# irp_s390254

hangar_model/: CMakeLists.txt  package.xml
hangar_model/actors/: human.world  walk.world
hangar_model/launch/: display.launch  gazebo.launch  hangar_world.launch  lab.launch  lab_yolov7.launch  laser_to_pcl.launch  obstacles.launch  yolov7.launch
hangar_model/map/: hangar_map_v1.pgm  hangar_map_v1.yaml  lab_map.pgm  lab_map.yaml
hangar_model/meshes/: base_link_reduced.stl  untitled.dae  untitled.stl
hangar_model/obstacles/baggage_trolley/: CMakeLists.txt  package.xml
hangar_model/obstacles/baggage_trolley/launch/: display.launch  gazebo.launch
hangar_model/obstacles/baggage_trolley/urdf/: baggage_trolley.csv  baggage_trolley.urdf
hangar_model/obstacles/bigger_ladder/: CMakeLists.txt  package.xml
hangar_model/obstacles/bigger_ladder/launch/: display.launch  gazebo.launch
hangar_model/obstacles/bigger_ladder/meshes/: base_link.STL
hangar_model/obstacles/bigger_ladder/urdf/: bigger_ladder.csv  bigger_ladder.urdf
hangar_model/obstacles/cantilever_ladder/: CMakeLists.txt  package.xml
hangar_model/obstacles/cantilever_ladder/launch/: display.launch  gazebo.launch
hangar_model/obstacles/cone/: CMakeLists.txt  package.xml
hangar_model/obstacles/forklift/: CMakeLists.txt  package.xml
hangar_model/obstacles/tool_cart/: CMakeLists.txt  package.xml
hangar_model/urdf/: hangar_model.csv  hangar_model.urdf
robot_motion/: CMakeLists.txt  package.xml
robot_motion/src/: motion.cpp  pcl_to_pixel.cpp  yolo_to_lidar.cpp
(+16 files in other folders)
